JBTM-3482: For WildFly 26.x txbridge WFLY Tests