@@ -540,5 +540,22 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+          <id>jdk17</id>
+          <activation>
+              <jdk>[17,)</jdk>
+              <!-- The add-opens is only needed for something in test(s?) that are in ran with "arq" profile so limit to that -->
+              <property>
+                <name>arqProfileActivated</name>
+                <value>true</value>
+              </property>
+          </activation>
+          <properties>
+              <!-- At least org.jboss.jbossts.txbridge.tests.inbound.junit.InboundBasicTests needs this -->
+              <jvm.args.modular>
+                  --add-opens=java.base/java.util=ALL-UNNAMED
+              </jvm.args.modular>
+          </properties>
+        </profile>
 	</profiles>
 </project>
